--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/Views/Shared/Layout/_Scripts.cshtml
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/Views/Shared/Layout/_Scripts.cshtml
@@ -5,6 +5,8 @@
 @inject ICachedUniqueKeyPerUser CachedUniqueKeyPerUser
 @inject IGetScriptsResponsePerUserConfiguration GetScriptsResponsePerUserConfiguration
 
+@*Uncomment signalr and abp.signalr-client scripts to include boilerplate signalr*@
+
 <environment names="Development">
     @*core scripts start*@
     <script src="~/libs/jquery/jquery.js" asp-append-version="true"></script>
@@ -30,14 +32,14 @@
     <script src="~/libs/sweetalert/sweetalert.min.js" asp-append-version="true"></script>
     <script src="~/libs/toastr/toastr.min.js" asp-append-version="true"></script>
     <script src="~/libs/moment/moment-with-locales.js" asp-append-version="true"></script>
-    <script src="~/libs/signalr/dist/browser/signalr.js" asp-append-version="true"></script>
+    @*<script src="~/libs/signalr/dist/browser/signalr.js" asp-append-version="true"></script>*@
     <script src="~/libs/abp-web-resources/Abp/Framework/scripts/abp.js" asp-append-version="true"></script>
     <script src="~/libs/abp-web-resources/Abp/Framework/scripts/libs/abp.jquery.js" asp-append-version="true"></script>
     <script src="~/libs/abp-web-resources/Abp/Framework/scripts/libs/abp.toastr.js" asp-append-version="true"></script>
     <script src="~/libs/abp-web-resources/Abp/Framework/scripts/libs/abp.blockUI.js" asp-append-version="true"></script>
     <script src="~/libs/abp-web-resources/Abp/Framework/scripts/libs/abp.spin.js" asp-append-version="true"></script>
     <script src="~/libs/abp-web-resources/Abp/Framework/scripts/libs/abp.sweet-alert.js" asp-append-version="true"></script>
-    <script src="~/libs/abp-web-resources/Abp/Framework/scripts/libs/abp.signalr-client.js" asp-append-version="true"></script>
+    @*<script src="~/libs/abp-web-resources/Abp/Framework/scripts/libs/abp.signalr-client.js" asp-append-version="true"></script>*@
     @*abp scripts end*@
 
     @*other scripts start*@
@@ -50,7 +52,7 @@
     <script src="~/js/abp.dataTable.js" asp-append-version="true"></script>
     <script src="~/js/main.js" asp-append-version="true"></script>
     @*custom scripts end*@
-    
+
     <script type="text/javascript">
         // This is used to get the application's root path from javascript.
         // It's useful if you're running application in a virtual directory under IIS.
